🔧 root workspace, references - front-erax-fit

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "private": true,
   "workspaces": [
-    "back-erax-fit"
+    "back-erax-fit",
+    "front-erax-fit"
   ],
   "devDependencies": {
     "eslint-config-standard": "^17.1.0",
