--- a/back-erax-fit/Dockerfile
+++ b/back-erax-fit/Dockerfile
@@ -1,13 +1,13 @@
 ﻿FROM node:latest
 
-WORKDIR /var/ilonsi
+WORKDIR /var/erax
 
-ADD package.json package-lock.json /var/ilonsi/
+ADD package.json package-lock.json /var/erax/
 
 RUN npm i
 
-ADD .eslintrc.js nest-cli.json tsconfig.json ormconfig.ts tsconfig.build.json /var/ilonsi/
-ADD .env /var/ilonsi/.env
+ADD .eslintrc.js nest-cli.json tsconfig.json ormconfig.ts tsconfig.build.json /var/erax/
+ADD .env /var/erax/.env
 
 CMD [ "npm", "run", "start:dev", "--preserveWatchOutput" ]
 
