--- a/back-erax-fit/Makefile
+++ b/back-erax-fit/Makefile
@@ -2,10 +2,10 @@
 	docker-compose down && docker-compose up --build
 
 dclog:
-	docker logs -f ilonsi_backend
+	docker logs -f erax_backend
 
 dcdown:
 	docker-compose down
 
 dcsh:
-	docker exec -it ilonsi_backend sh
+	docker exec -it erax sh
