--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,19 +1,31 @@
-{
+ {
   "parser": "@typescript-eslint/parser",
+    
   "parserOptions": {
     "project": "./tsconfig.json"
   },
-  "extends": [
-    "eslint:recommended",
-    "standard",
-    "prettier",
+  "extends": [ 
     "plugin:@typescript-eslint/recommended",
-    "prettier/@typescript-eslint"
+    "plugin:import/errors",
+    "plugin:import/warnings",
+    "plugin:import/typescript",
+    "plugin:prettier/recommended",
+    "prettier"
   ],
-  "plugins": ["@typescript-eslint"],
+  "plugins": [
+    "@typescript-eslint",
+    "prettier"
+  ],
   "env": {
-    "es6": true,
     "node": true
   },
-  "ignorePatterns": ["dist", "node_modules", "examples", "scripts"]
+  "rules": {
+    "@typescript-eslint/interface-name-prefix": "off",
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "indent": ["error", 2], 
+    "quotes": ["warn", "single", { "avoidEscape": true }], 
+    "comma-spacing": ["warn", { "before": false, "after": true }]
+  },
+  "ignorePatterns": ["dist", "node_modules", "examples", "scripts", ".eslintrc.js"]
 }
