--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,24 @@
 {
   "compilerOptions": {
     "incremental": true,
-    "outDir": "./dist",
+    "outDir": "./build",
     "baseUrl": ".",
     "moduleResolution": "Node",
     "module": "CommonJS",
-    "target": "ES2018",
+    "target": "ESNext",
     "sourceMap": true,
     "lib": [
       "esnext"
     ],
     "esModuleInterop": true,
     "alwaysStrict": true,
-    "allowJs": false,
+    "checkJs": true,
+    "allowJs": true,
     "strictNullChecks": true,
     "noImplicitAny": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "resolveJsonModule": true,
     "paths": {
       "@monorepo/*": [
@@ -30,5 +31,5 @@
       "path": "back-erax-fit"
     }
   ],
-  "exclude": ["node_modules", "dist", "*.d.ts"]
+  "exclude": ["node_modules", "build", "*.d.ts"]
 }
