--- a/back-erax-fit/package.json
+++ b/back-erax-fit/package.json
@@ -24,10 +24,22 @@
     "migration:run": "npm run typeorm migration:run -- -d ./src/database/data-source.ts"
   },
   "dependencies": {
+    "@nestjs/common": "^10.2.6",
+    "@nestjs/config": "^3.1.1",
+    "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.1.1",
+    "@nestjs/passport": "^10.0.2",
+    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.1.8",
+    "@nestjs/throttler": "^4.2.1",
+    "@nestjs/typeorm": "^10.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/passport-jwt": "^3.0.9"
   },
   "devDependencies": {
+    "@nestjs/cli": "^10.0.0",
+    "@nestjs/schematics": "^10.0.0",
+    "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/supertest": "^2.0.12"
