--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "private": true,
   "workspaces": [
-    "back-bodyblast"
+    "back-body-blast"
   ],
   "devDependencies": {
     "@types/node": "^20.6.4",
