--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "baseUrl": ".",
     "moduleResolution": "Node",
     "module": "CommonJS",
-    "target": "ESNext",
+    "target": "ES2021",
     "sourceMap": true,
     "lib": [
       "esnext"
