--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "baseUrl": ".",
     "moduleResolution": "Node",
     "module": "CommonJS",
-    "target": "ES2018",
+    "target": "es2021",
     "sourceMap": true,
     "lib": [
       "esnext"
