--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,14 +8,14 @@
     "target": "ES2021",
     "sourceMap": true,
     "lib": [
-      "esnext"
+      "es2021"
     ],
     "esModuleInterop": true,
     "alwaysStrict": true,
     "checkJs": true,
     "allowJs": true,
     "strictNullChecks": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noUnusedLocals": false,
