:wrench: Allowjs -> false, noimplicitany -> false root

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,10 +12,9 @@
     ],
     "esModuleInterop": true,
     "alwaysStrict": true,
-    "checkJs": true,
-    "allowJs": true,
+    "allowJs": false,
     "strictNullChecks": true,
-    "noImplicitAny": false,
+    "noImplicitAny": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noUnusedLocals": false,
