:wrench: Dist/back -> dist in exclude

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,5 +30,5 @@
       "path": "back-body-blast"
     }
   ],
-  "exclude": ["node_modules", "dist/back-body-blast", "*.d.ts"]
+  "exclude": ["node_modules", "dist", "*.d.ts"]
 }
