--- a/back-erax-fit/package.json
+++ b/back-erax-fit/package.json
@@ -34,7 +34,16 @@
     "@nestjs/throttler": "^4.2.1",
     "@nestjs/typeorm": "^10.0.0",
     "@types/bcrypt": "^5.0.0",
-    "@types/passport-jwt": "^3.0.9"
+    "@types/passport-jwt": "^3.0.9",
+    "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "pg": "^8.11.3",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.17" 
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
