--- a/back-erax-fit/package.json
+++ b/back-erax-fit/package.json
@@ -51,7 +51,13 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
-    "@types/supertest": "^2.0.12"
+    "@types/supertest": "^2.0.12",
+    "supertest": "^6.3.3",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
+    "ts-loader": "^9.4.3",
+    "ts-node": "^10.9.1",
+    "prisma-nestjs-dto-generator": "^0.1.12"
   },
   "jest": {
     "moduleFileExtensions": [
