--- a/package.json
+++ b/package.json
@@ -15,14 +15,33 @@
     "@typescript-eslint/parser": "^6.7.2",
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^4.2.1",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "prettier": "^3.0.3",
-    "typescript": "^5.2.2",
     "source-map-support": "^0.5.21",
-    "tsconfig-paths": "^4.2.0"
-  } 
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "@nestjs/common": "^10.2.6",
+    "@nestjs/config": "^3.1.1",
+    "@nestjs/core": "^10.2.6",
+    "@nestjs/jwt": "^10.1.1",
+    "@nestjs/passport": "^10.0.2",
+    "@nestjs/swagger": "^7.1.12",
+    "@nestjs/testing": "^10.2.6",
+    "@nestjs/throttler": "^5.0.0",
+    "@nestjs/typeorm": "^10.0.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/jest": "^29.5.5",
+    "@types/validator": "^13.11.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "express": "^4.18.2",
+    "passport-jwt": "^4.0.1",
+    "typeorm": "^0.3.17"
+  }
 }
