🚚 front-erax-fit → front-body-blast

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "private": true,
   "workspaces": [
     "back-erax-fit",
-    "front-erax-fit"
+    "front-body-blast"
   ],
   "devDependencies": {
     "eslint-config-standard": "^17.1.0",
