--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,7 @@
       "path": "back-erax-fit"
     },
     {
-      "path": "front-erax-fit"
+      "path": "front-body-blast"
     }
   ],
   "exclude": [
