--- a/back-erax-fit/package.json
+++ b/back-erax-fit/package.json
@@ -26,24 +26,26 @@
   "dependencies": {
     "@nestjs/common": "^10.2.6",
     "@nestjs/config": "^3.1.1",
-    "@nestjs/core": "^10.0.0",
+    "@nestjs/core": "^10.2.6",
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/passport": "^10.0.2",
-    "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/swagger": "^7.1.8",
-    "@nestjs/throttler": "^4.2.1",
+    "@nestjs/swagger": "^7.1.12",
+    "@nestjs/testing": "^10.2.6",
+    "@nestjs/throttler": "^5.0.0",
     "@nestjs/typeorm": "^10.0.0",
     "@types/bcrypt": "^5.0.0",
-    "@types/passport-jwt": "^3.0.9",
+    "@types/jest": "^29.5.5",
+    "@types/validator": "^13.11.2",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "express": "^4.18.2",
     "passport": "^0.6.0",
+    "pg":"^8.11.3",
+    "reflect-metadata": "0.1.13",
     "passport-jwt": "^4.0.1",
-    "pg": "^8.11.3",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1",
-    "typeorm": "^0.3.17" 
+    "rxjs":"^7.8.1",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
