--- a/package.json
+++ b/package.json
@@ -37,11 +37,14 @@
     "@nestjs/typeorm": "^10.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.5.5",
+    "@types/passport-local": "^1.0.36",
     "@types/validator": "^13.11.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "express": "^4.18.2",
+    "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "typeorm": "^0.3.17"
   }
 }
