--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
 node_modules
 dist
+.DS_Store
+
+#Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+logs
+*.log
+pnpm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+#Editors
+.idea
