--- a/back-erax-fit/tsconfig.json
+++ b/back-erax-fit/tsconfig.json
@@ -8,7 +8,7 @@
     "allowSyntheticDefaultImports": true,
     "target": "ES2021",
     "sourceMap": true,
-    "outDir": "./dist/back-body-blast",
+    "outDir": "./dist/back-erax-fit",
     "baseUrl": "./",
     "incremental": true,
     "skipLibCheck": true,
