:pencil2: Fixes after review

--- a/back-erax-fit/docker-compose.yml
+++ b/back-erax-fit/docker-compose.yml
@@ -1,22 +1,22 @@
 ﻿version: '3.7'
 
 services:
-  # erax_backend:
-  #   container_name: erax_backend
-  #   restart: always
-  #   build: .
-  #   env_file: .env
-  #   volumes:
-  #     - ./src:/var/erax/src
-  #     - ./migrations:/var/erax/migrations
-  #     - ./test:/var/erax/test
-  #   working_dir: /var/erax
-  #   ports:
-  #     - "${NODEJS_PUBLIC_PORT}:3000"
-  #   depends_on:
-  #     - erax_database
-  #   networks:
-  #     - erax_network
+   erax_backend:
+     container_name: erax_backend
+     restart: always
+     build: .
+     env_file: .env
+     volumes:
+       - ./src:/var/erax/src
+       - ./migrations:/var/erax/migrations
+       - ./test:/var/erax/test
+     working_dir: /var/erax
+     ports:
+       - "${NODEJS_PUBLIC_PORT}:3000"
+     depends_on:
+       - erax_database
+     networks:
+       - erax_network
   erax_database:
     image: postgres:15.3-alpine
     container_name: erax_database
