:art: Improved config fikes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
   },
   "references": [
     {
-      "path": "back-body-blast"
+      "path": "back-erax-fit"
     },
     {
       "path": "front-body-blast"
