--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
  {
    "parserOptions": {
     "parser": "@typescript-eslint/parser",
+    "ecmaVersion": 2021,
     "project": "./tsconfig.json"
   },
   "extends": [ 
