--- a/back-erax-fit/package.json
+++ b/back-erax-fit/package.json
@@ -36,6 +36,7 @@
     "@nestjs/typeorm": "^10.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.5.5",
+    "@types/multer": "^1.4.8",
     "@types/validator": "^13.11.2",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
