--- a/back-erax-fit/package.json
+++ b/back-erax-fit/package.json
@@ -19,9 +19,9 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "ts-node ./node_modules/typeorm/cli.js",
-    "migration:generate": "npm run typeorm -- -d ./src/database/data-source.ts migration:generate",
-    "migration:revert": "npm run typeorm -- -d ./src/database/data-source.ts migration:revert",
-    "migration:run": "npm run typeorm migration:run -- -d ./src/database/data-source.ts"
+    "migration:generate": "yarn typeorm -- -d ./src/database/data-source.ts migration:generate",
+    "migration:revert": "yarn typeorm -- -d ./src/database/data-source.ts migration:revert",
+    "migration:run": "yarn typeorm migration:run -- -d ./src/database/data-source.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.2.6",
