--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "private": true,
   "workspaces": [
-    "back-erax-fit",
+    "back-body-blast",
     "front-body-blast"
   ],
   "devDependencies": {
