--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
   "license": "MIT",
   "private": true,
   "workspaces": [
-    "back-body-blast",
+    "back-erax-fit",
     "front-body-blast"
   ],
-  
   "devDependencies": {
     "@types/node": "^20.6.4",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
@@ -20,7 +19,7 @@
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "5.0.0",
     "eslint-plugin-promise": "^6.1.1",
     "prettier": "^3.0.3",
     "source-map-support": "^0.5.21",
@@ -28,4 +27,3 @@
     "typescript": "^5.2.2"
   }
 }
-
