--- a/back-erax-fit/package.json
+++ b/back-erax-fit/package.json
@@ -34,10 +34,6 @@
     "@nestjs/testing": "^10.2.6",
     "@nestjs/throttler": "^4.2.1",
     "@nestjs/typeorm": "^10.0.0",
-    "@types/bcrypt": "^5.0.0",
-    "@types/jest": "^29.5.5",
-    "@types/passport-local": "^1.0.36",
-    "@types/validator": "^13.11.2",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -54,8 +50,12 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/jest": "^29.5.5",
+    "@types/passport-local": "^1.0.36",
+    "@types/validator": "^13.11.2",
+    "@types/passport-jwt": "^3.0.9",
     "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.2",
     "@types/supertest": "^2.0.12",
     "jest": "^29.5.0",
     "supertest": "^6.3.3",
