--- a/back-erax-fit/package.json
+++ b/back-erax-fit/package.json
@@ -43,11 +43,12 @@
     "class-validator": "^0.14.0",
     "express": "^4.18.2",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.11.3",
     "reflect-metadata": "0.1.13",
-    "passport-jwt": "^4.0.1",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
