--- a/back-erax-fit/package.json
+++ b/back-erax-fit/package.json
@@ -31,7 +31,6 @@
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.2.7",
     "@nestjs/swagger": "^7.1.12",
-    "@nestjs/testing": "^10.2.6",
     "@nestjs/throttler": "^4.2.1",
     "@nestjs/typeorm": "^10.0.0",
     "@types/bcrypt": "^5.0.0",
@@ -56,12 +55,13 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.0",
-    "@types/jest": "^29.5.5",
-    "@types/passport-local": "^1.0.36",
-    "@types/validator": "^13.11.2",
-    "@types/passport-jwt": "^3.0.9",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.5",
+    "@types/passport-jwt": "^3.0.9",
+    "@types/passport-local": "^1.0.36",
     "@types/supertest": "^2.0.12",
+    "@types/validator": "^13.11.2",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "jest": "^29.5.0",
     "prisma-nestjs-dto-generator": "^0.1.12",
     "supertest": "^6.3.3",
