--- a/back-erax-fit/package.json
+++ b/back-erax-fit/package.json
@@ -64,7 +64,7 @@
     "@types/supertest": "^2.0.12",
     "@types/validator": "^13.11.2",
     "jest": "^29.5.0",
-    "prisma-nestjs-dto-generator": "^0.1.12",
+    "cron": "^3.1.6",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
